Added PUT method
