# app/Http/Controllers/AuthorController.php
@@ -8,12 +8,13 @@ use App\Http\Resources\AuthorResource;
 use App\Http\Resources\AuthorCollection;
 use App\Rules\Year;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
 
 class AuthorController extends Controller
 {
     public function __construct()
     {
-        $this->middleware('check_uuid', ['only' => ['show']]);
+        $this->middleware('check_uuid', ['only' => ['show', 'update']]);
     }
 
     /**
@@ -34,11 +35,25 @@ class AuthorController extends Controller
         return new AuthorResource(Author::findOrFail($uuid));
     }
 
+    /**
+     * @param AuthorRequest $request
+     *
+     * @return mixed
+     */
     public function store(AuthorRequest $request)
     {
         $validated = $request->transformValidated();
         $author = Author::create($validated);
 
         return response()->jsonCreated($author->id);
+    }
+
+    public function update(AuthorRequest $request, string $uuid)
+    {
+        $author = Author::findOrFail($uuid);
+        $validated = $request->transformValidated();
+        $author->update($validated);
+
+        return response('', Response::HTTP_NO_CONTENT);
     }
 }
